--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
